--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Package: REdaS
 Type: Package
-Title: Companion Package to the Book “R: Einführung durch angewandte
-        Statistik”
-Version: 0.9.2
-Date: 2015-01-04
+Title: Companion Package to the Book 'R: Einführung durch angewandte
+        Statistik'
+Version: 0.9.3
+Date: 2015-11-12
 Authors@R: person(given=c("Marco", "Johannes"), family="Maier", email="marco.maier@wu.ac.at", role=c("cre","aut"))
-Description: This package provides functions used in the second edition of “R: Einführung durch angewandte Statistik”.
+Description: Provides functions used in the 'R: Einführung durch angewandte Statistik' (second edition).
 Depends: R (>= 3.0.0), grid
+Imports: stats
 Suggests: car, cluster, foreign, GPArotation, MASS, mclust, psych,
         UsingR, vcd
 License: GPL-2
 Encoding: UTF-8
-Packaged: 2015-01-04 18:32:01 UTC; maier
+NeedsCompilation: no
+Packaged: 2015-11-12 18:47:43 UTC; maier
 Author: Marco Johannes Maier [cre, aut]
 Maintainer: Marco Johannes Maier <marco.maier@wu.ac.at>
-NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2015-01-04 23:41:23
+Date/Publication: 2015-11-13 11:47:40
